===================================
Rubine Lite Changelog
===================================

Version 1.2.2
-----------------------------------
[added] support for ThemeZee Related Posts plugin
[added] category and tag descriptions on archive template

Version 1.2.1
-----------------------------------
[added] basic support for wooCommerce
[added] support for ThemeZee Breadcrumbs plugin
[added] email icon to social menu
[added] custom header image settings
[added] theme links in theme options panel

Version 1.2.0
-----------------------------------
[removed] empty spaces at the end of template files
[fixed] styling of 404 template
[fixed] styling of tabbed content widget

Version 1.1.9
-----------------------------------
[changed] all h2 post and page titles to h1 for better SEO
[fixed] postmeta styling for widget bundle

Version 1.1.8
-----------------------------------
[added] escaping for translation strings for improved security

Version 1.1.7
-----------------------------------
[improved] structure of post meta functions for better re-usability

Version 1.1.6
-----------------------------------
[moved] additional functions from functions.php to extras.php and template-tags.php
[added] theme support for Widget Bundle Addon Plugin
[removed] fallback solution for new title tag feature of WordPress
[changed] implementation of threaded comments javascript

Version 1.1.5
-----------------------------------
[improved] code of 404.php and search.php templates
[improved] phrasing of all translatable text strings
[updated] translation files

Version 1.1.4
-----------------------------------
[changed] archive titles to use the new the_archive_title() function
[removed] unnecessary template files tag.php, category.php and author.php

Version 1.1.3
-----------------------------------
[added] setting to display or hide post date
[added] setting to display or hide post author
[added] setting to display or hide post categories
[added] setting to display or hide post tags