@@ -3,11 +3,16 @@
  *
  */
 
+.customize-control-checkbox {
+    margin-bottom: 4px;
+}
+
 #customize-control-rubine_control_header_content,
 #customize-control-rubine_control_footer_content,
 #customize-control-rubine_control_postmeta_headline,
+#customize-control-rubine_control_post_footer_headline,
 #customize-control-rubine_control_excerpt_text_headline{
-	margin: 12px 0 0;
+	margin: 16px 0 0;
 }
 
 #customize-control-rubine_control_default_fonts,
