@@ -43,11 +43,10 @@ function rubine_default_options() {
 		'meta_date'							=> true,
 		'meta_author'						=> true,
 		'meta_category'						=> true,
-		'meta_tags'							=> true
+		'meta_tags'							=> true,
+		'post_navigation' 					=> false,
 	);
 	
 	return $default_options;
+	
 }
-
-
-?>
